--- a/style.css
+++ b/style.css
@@ -1,5 +1,27 @@
 /* Police */
-
-/* Mobile */
-@media all and (width: 600px) {
+@font-face {
+  font-family: "robotothin";
+  src: url("Roboto/Roboto-Thin-webfont.eot");
+  src: url("Roboto/Roboto-Thin-webfont.eot?#iefix") format("embedded-opentype"),
+    url("Roboto/Roboto-Thin-webfont.woff2") format("woff2"),
+    url("Roboto/Roboto-Thin-webfont.woff") format("woff"),
+    url("Roboto/Roboto-Thin-webfont.ttf") format("truetype"),
+    url("Roboto/Roboto-Thin-webfont.svg#robotothin") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
+
+@font-face {
+  font-family: "Shrikhand";
+  src: url("Shrikhand/Shrikhand-Regular.ttf");
+}
+
+h1 {
+  font-family: "Shrikhand";
+}
+
+p {
+  font-family: "robotothin";
+  font-size: 1em;
+}
+/* Mobile */
