--- a/style.css
+++ b/style.css
@@ -138,3 +138,23 @@ input {
   color: white;
   background-color: #9356dc;
 }
+
+/* Menu */
+section[id="menu"] {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+article {
+  margin-left: 20px;
+  margin-right: 20px;
+  height: 300px;
+  box-shadow: -1px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+article img {
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+}
