--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 /* Police */
 @font-face {
-  font-family: "robotothin";
-  src: url("Roboto/Roboto-Thin-webfont.eot");
-  src: url("Roboto/Roboto-Thin-webfont.eot?#iefix") format("embedded-opentype"),
-    url("Roboto/Roboto-Thin-webfont.woff2") format("woff2"),
-    url("Roboto/Roboto-Thin-webfont.woff") format("woff"),
-    url("Roboto/Roboto-Thin-webfont.ttf") format("truetype"),
-    url("Roboto/Roboto-Thin-webfont.svg#robotothin") format("svg");
+  font-family: "robotoregular";
+  src: url("Roboto/Roboto-Regular-webfont.eot");
+  src: url("Roboto/Roboto-Regular-webfont.eot?#iefix")
+      format("embedded-opentype"),
+    url("Roboto/Roboto-Regular-webfont.woff2") format("woff2"),
+    url("Roboto/Roboto-Regular-webfont.woff") format("woff"),
+    url("Roboto/Roboto-Regular-webfont.ttf") format("truetype"),
+    url("Roboto/Roboto-Regular-webfont.svg#robotoregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -22,7 +23,7 @@ body {
 }
 
 #file {
-  font-family: ""; /* voir quel police dans l'aceuille */
+  font-family: "robotoregular"; /* voir quel police dans l'aceuille */
 }
 
 /* Header */
@@ -34,13 +35,12 @@ header {
   box-shadow: 0px 3px 6px #d9d9d9;
 }
 
-img {
+header img {
   margin-left: -20px;
-  width: 50%;
-  height: 40px;
-  font-family: "Shrikhand";
+  width: 35%;
+  max-width: 400px;
+  min-width: 200px;
 }
-/* 
 
 /* Presentation */
 #container {
@@ -63,7 +63,6 @@ input {
   background-color: #d9d9d9;
   border: none;
 }
-/*quel balise utiliser bouton formulaire ?*/
 
 .pres {
   border: 1px solid black;
@@ -125,8 +124,8 @@ input {
   box-shadow: -1px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
-.Filters:hover {
-  background-color: #ff79da;
+.Filters:hover i {
+  color: #ff79da;
 }
 
 .Filters__numbers {
@@ -141,20 +140,30 @@ input {
 
 /* Menu */
 section[id="menu"] {
+  border: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  height: 1300px;
+}
+
+section[id="menu"] h1 {
+  margin-left: 20px;
 }
 
 article {
   margin-left: 20px;
   margin-right: 20px;
-  height: 300px;
   box-shadow: -1px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 article img {
   width: 100%;
-  height: 100px;
+  height: 120px;
   object-fit: cover;
 }
