--- a/style.css
+++ b/style.css
@@ -23,8 +23,16 @@ body {
 }
 
 #file {
-  font-family: "robotoregular"; /* voir quel police dans l'aceuille */
+  font-family: "robotoregular";
 }
+
+/*
+h1,
+h2,
+h3 {
+  font-family: "Shrikhand";
+}
+*/
 
 /* Header */
 header {
@@ -124,8 +132,12 @@ input {
   box-shadow: -1px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
+.Filters:hover {
+  background-color: #f5edff;
+}
+
 .Filters:hover i {
-  color: #ff79da;
+  color: #9356dc;
 }
 
 .Filters__numbers {
@@ -155,6 +167,7 @@ article {
   margin-left: 20px;
   margin-right: 20px;
   box-shadow: -1px 2px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
 a {
@@ -171,9 +184,25 @@ article img {
 /* contact */
 
 footer {
-  background-color: gray;
+  background-color: #353535;
+  color: white;
 }
 
 h3 {
   font-family: "Shrikhand";
+  margin-left: 20px;
+}
+
+footer p {
+  margin-left: 20px;
+}
+
+/* tablette */
+
+@media all and (min-width: 768px) and (max-width: 1000.99px) {
+}
+
+/* Desktop */
+
+@media all and (min-width: 1001px) and (max-width: 1440px) {
 }
