--- a/style.css
+++ b/style.css
@@ -1,45 +1,3 @@
-/* Police */
-@font-face {
-  font-family: "robotoregular";
-  src: url("Roboto/Roboto-Regular-webfont.eot");
-  src: url("Roboto/Roboto-Regular-webfont.eot?#iefix")
-      format("embedded-opentype"),
-    url("Roboto/Roboto-Regular-webfont.woff2") format("woff2"),
-    url("Roboto/Roboto-Regular-webfont.woff") format("woff"),
-    url("Roboto/Roboto-Regular-webfont.ttf") format("truetype"),
-    url("Roboto/Roboto-Regular-webfont.svg#robotoregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Shrikhand";
-  src: url("Shrikhand/Shrikhand-Regular.ttf");
-}
-
-/* boddy */
-body {
-  margin: 0px;
-}
-
-#file {
-  font-family: "robotoregular";
-}
-
-/* Header */
-header {
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-header img {
-  width: 35%;
-  max-width: 400px;
-  min-width: 200px;
-}
-
 /* Presentation */
 
 #search {
@@ -237,12 +195,7 @@ article button {
   right: 20px;
 }
 
-.fa-heart {
-  font-size: 2.5em;
-  color: #606060;
-}
-
-article button:hover {
+article button:active {
   cursor: pointer;
 }
 
@@ -289,6 +242,10 @@ h3 {
 footer p {
   margin-left: 20px;
   font-size: 1em;
+}
+
+footer p a:last-child {
+  color: white;
 }
 
 /* tablette */
