--- a/style2.css
+++ b/style2.css
@@ -12,11 +12,12 @@ button a {
 }
 
 /* picture */
-
 div[id="picture"] {
   border: 1px solid black;
   width: 100%;
   height: 260px;
+  position: relative;
+  z-index: 1;
 }
 
 div[id="picture"] img {
@@ -27,9 +28,13 @@ div[id="picture"] img {
 
 /* Menu */
 section {
-  border: 1px solid black;
-  border-radius: 20px / 20px;
+  border-radius: 30px/30px;
   background-color: #f6f6f6;
+  width: 100%;
+  margin-top: -30px;
+  position: relative;
+  z-index: 2;
+  height: 1600px;
 }
 
 #title__heart {
@@ -41,16 +46,96 @@ section {
 
 section h1 {
   font-family: "Shrikhand";
-  margin-left: 20px;
+  margin-left: 10px;
   font-size: 2em;
 }
 
 button {
   border: none;
   background-color: #f6f6f6;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 button:active {
   cursor: pointer;
+}
+
+article {
+  margin-left: 10px;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 400px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  font-size: 1.3em;
+  color: #1f1f1f;
+}
+
+.lin--tertiary {
+  border: 2px solid #99e2d0;
+  width: 50px;
+  background-color: #99e2d0;
+  margin-top: -30px;
+}
+
+.menu {
+  background-color: white;
+  box-shadow: -1px 2px 15px rgba(0, 0, 0, 0.3);
+  border-radius: 20px/20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+}
+
+.menu__title§ {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 70px;
+}
+
+h3 {
+  margin-bottom: 5px;
+  font-size: 1.2em;
+}
+
+div[class="menu__title§"] p {
+  margin-top: 5px;
+  font-size: 1.1em;
+}
+
+.menu__price {
+  align-self: flex-end;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+em {
+  font-size: 1.1em;
+  font-weight: bold;
+  font-style: normal;
+}
+
+#btn {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+div[id="btn"] button {
+  color: white;
+  background-color: #e270db;
+  width: 230px;
+  height: 55px;
+  font-size: 1.3em;
+  border-radius: 40px;
+  box-shadow: -1px 2px 15px rgba(0, 0, 0, 0.3);
 }
