--- a/style3.css
+++ b/style3.css
@@ -47,3 +47,35 @@ header img {
   color: #606060;
   font-size: 2.5em;
 }
+
+/* contact */
+footer {
+  margin-top: 0px;
+  background-color: #353535;
+  color: white;
+  height: 240px;
+}
+
+.fa-utensils {
+  margin-right: 15px;
+  font-size: 1em;
+}
+
+.fa-hands-helping {
+  margin-right: 10px;
+  font-size: 0.8em;
+}
+
+.footer--bold {
+  font-weight: bold;
+}
+
+footer p {
+  margin-left: 20px;
+  font-size: 1em;
+}
+
+footer p a:last-child {
+  color: white;
+  text-decoration: none;
+}
