--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,6 @@
 /* Header */
-header button {
+a {
+  color: #353535;
   background-color: white;
   border: none;
   position: absolute;
@@ -7,14 +8,9 @@ header button {
   font-size: 1.5em;
 }
 
-button a {
-  color: #353535;
-}
-
 /* picture */
 div[id="picture"] {
-  border: 1px solid black;
-  width: 99%;
+  width: 100%;
   height: 260px;
   position: relative;
   z-index: 1;
@@ -34,7 +30,6 @@ section {
   margin-top: -30px;
   position: relative;
   z-index: 2;
-  height: 1600px;
 }
 
 #title__heart {
@@ -144,10 +139,12 @@ em {
 
 .btn {
   width: 100%;
+  max-width: 400px;
   height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: auto;
 }
 
 /* voir le btn*/
@@ -155,11 +152,12 @@ em {
 div[class="btn"] button {
   color: white;
   background-color: #e270db;
-  width: 230px;
+  width: 100%;
   height: 55px;
   font-size: 1.3em;
   border-radius: 40px;
   box-shadow: -1px 2px 15px rgba(0, 0, 0, 0.3);
+  margin-bottom: 15px;
 }
 
 /* contact */
@@ -167,6 +165,7 @@ div[class="btn"] button {
 h4 {
   font-family: "Shrikhand";
   margin-left: 20px;
+  margin-top: 0px;
   padding-top: 20px;
   font-size: 1.4em;
 }
