--- a/menu.css
+++ b/menu.css
@@ -1,5 +1,5 @@
 /* Header */
-a {
+header a {
   color: #353535;
   background-color: white;
   border: none;
@@ -24,7 +24,8 @@ div[id="picture"] img {
 
 /* Menu */
 section {
-  border-radius: 30px/30px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
   background-color: #f6f6f6;
   width: 100%;
   margin-top: -30px;
