--- a/menu.css
+++ b/menu.css
@@ -43,7 +43,7 @@ section {
 section h1 {
   font-family: "Shrikhand";
   margin-left: 10px;
-  font-size: 2em;
+  font-size: 1.6em;
 }
 
 .title--size {
@@ -78,7 +78,16 @@ article {
   height: 500px;
 }
 
+.title__tertiary {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
 h2 {
+  margin: 0px;
   font-size: 1.3em;
   color: #1f1f1f;
 }
@@ -87,7 +96,14 @@ h2 {
   border: 2px solid #99e2d0;
   width: 50px;
   background-color: #99e2d0;
-  margin-top: -30px;
+}
+
+.together__menu {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
 }
 
 .menu {
@@ -110,21 +126,21 @@ h2 {
 
 h3 {
   margin-bottom: 5px;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 .menu__title§__T--size {
-  font-size: 1.1em;
+  font-size: 1em;
 }
 
 .menu__title§__§ {
   margin-top: 5px;
-  font-size: 1.1em;
+  font-size: 0.7em;
   color: #7d7d7d;
 }
 
 .menu__§--size {
-  font-size: 0.9em;
+  font-size: 0.8em;
 }
 
 .menu__price {
@@ -155,7 +171,7 @@ div[class="btn"] button {
   color: white;
   background-color: #e270db;
   /*width: 100%;*/
-  margin-top: 20px;
+  margin-top: 50px;
   width: 70%;
   height: 55px;
   font-size: 1.3em;
@@ -172,4 +188,147 @@ h4 {
   padding-top: 20px;
   font-size: 1.4em;
   width: 100%;
+}
+
+@media all and (min-width: 768px) and (max-width: 991.98px) {
+  /* Header */
+  header img {
+    width: 35%;
+    max-width: 400px;
+    min-width: 200px;
+  }
+
+  /* Menu */
+
+  article {
+    height: auto;
+  }
+
+  .together__menu {
+    flex-direction: row;
+    height: auto;
+    justify-content: space-between;
+  }
+
+  .menu {
+    width: 32%;
+  }
+
+  h3 {
+    font-size: 0.8em;
+  }
+
+  .menu__title§__§ {
+    font-size: 0.6em;
+  }
+
+  .menu__price {
+    margin-right: 10px;
+  }
+
+  em {
+    font-size: 1em;
+  }
+
+  /* Contact */
+  h4 {
+    font-size: 2em;
+  }
+
+  #contact {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+  }
+
+  .fa-utensils {
+    font-size: 2em;
+  }
+
+  .fa-hands-helping {
+    font-size: 1em;
+  }
+
+  div[id="contact"] p {
+    font-size: 2em;
+  }
+}
+
+@media all and (min-width: 992px) and (max-width: 1440px) {
+  /* Header */
+  header img {
+    width: 35%;
+    max-width: 400px;
+    min-width: 200px;
+  }
+
+  /* Menu */
+  section h1 {
+    font-size: 2em;
+  }
+
+  .title--size {
+    font-size: 2em;
+  }
+
+  article {
+    height: auto;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .title__tertiary {
+    width: 15%;
+  }
+
+  .together__menu {
+    flex-direction: row;
+    height: auto;
+    justify-content: space-between;
+  }
+
+  .menu {
+    width: 32%;
+  }
+
+  h3 {
+    font-size: 0.9em;
+  }
+
+  .menu__title§__§ {
+    font-size: 0.7em;
+  }
+
+  .menu__price {
+    margin-right: 10px;
+  }
+
+  em {
+    font-size: 1em;
+  }
+
+  /* Contact */
+  h4 {
+    font-size: 2em;
+  }
+
+  #contact {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+  }
+
+  .fa-utensils {
+    font-size: 2em;
+  }
+
+  .fa-hands-helping {
+    font-size: 1em;
+  }
+
+  div[id="contact"] p {
+    font-size: 2em;
+  }
+
+  /*paragraphe et p ne chnage pas de taille*/
 }
