--- a/menu.css
+++ b/menu.css
@@ -225,6 +225,10 @@ h4 {
 
 @media all and (min-width: 768px) and (max-width: 991.98px) {
   /* Header */
+  header a {
+    font-size: 2.5em;
+  }
+
   header img {
     width: 35%;
     max-width: 400px;
@@ -232,11 +236,64 @@ h4 {
   }
 
   /* Menu */
-  /*.menu {
-    max-width: 800px;
-    width: 100%;
-    margin: auto;
-  }*/
+  article {
+    height: 500px;
+  }
+
+  section h1 {
+    margin-left: 20px;
+    font-size: 3em;
+  }
+
+  div[class="title__heart"] button {
+    margin-right: 20px;
+    font-size: 1.5em;
+  }
+
+  .title__tertiary {
+    margin-bottom: 30px;
+  }
+
+  h2 {
+    font-size: 2em;
+  }
+
+  .lin--tertiary {
+    width: 80px;
+  }
+
+  .together__menu {
+    align-items: center;
+    height: 100%;
+  }
+
+  .menu {
+    width: 90%;
+    height: 100%;
+    margin-bottom: 15px;
+  }
+
+  h3 {
+    font-size: 2.3em;
+  }
+
+  .menu__title§__§ {
+    font-size: 1.9em;
+  }
+
+  .menu__price {
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+
+  em {
+    font-size: 1.5em;
+  }
+
+  div[class="btn"] button {
+    font-size: 2.5em;
+    height: 80px;
+  }
 
   /* Contact */
   h4 {
@@ -246,6 +303,10 @@ h4 {
 
 @media all and (min-width: 992px) and (max-width: 1440px) {
   /* Header */
+  header a {
+    font-size: 3em;
+  }
+
   header img {
     width: 35%;
     max-width: 400px;
@@ -253,8 +314,24 @@ h4 {
   }
 
   /* Menu */
+
+  article {
+    height: 600px;
+  }
+
+  section h1 {
+    margin-left: 20px;
+    font-size: 3.5em;
+  }
+
+  div[class="title__heart"] button {
+    margin-right: 20px;
+    font-size: 2em;
+  }
+
   .title__tertiary {
     align-items: center;
+    margin-bottom: 40px;
   }
 
   h2 {
@@ -265,13 +342,41 @@ h4 {
     width: 250px;
   }
 
+  .together__menu {
+    align-items: center;
+    height: 100%;
+  }
+
   .menu {
     width: 90%;
-    margin: auto;
+    height: 100%;
+    margin-bottom: 20px;
+  }
+
+  h3 {
+    font-size: 3em;
+  }
+
+  .menu__title§__§ {
+    font-size: 2.5em;
+  }
+
+  .menu__price {
+    margin-right: 10px;
+    margin-bottom: 20px;
+  }
+
+  em {
+    font-size: 2.5em;
+  }
+
+  div[class="btn"] button {
+    font-size: 3em;
+    height: 100px;
   }
 
   /* Contact */
   h4 {
-    font-size: 1.5em;
+    font-size: 2.5em;
   }
 }
