--- a/style.css
+++ b/style.css
@@ -9,6 +9,17 @@
   width: 100%;
   height: 100%;
   background-color: #eaeaea;
+  animation: together 3s;
+}
+
+@keyframes together {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
 
 .loading-spinner__loader {
