--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   z-index: 2;
   width: 100%;
   height: 100%;
   background-color: #eaeaea;
-  animation: together 3s;
+  animation: together 3s forwards;
 }
 
 @keyframes together {
@@ -17,8 +17,13 @@
     opacity: 1;
   }
 
+  50% {
+    opacity: 0.5;
+  }
+
   100% {
     opacity: 0;
+    left: -9999px;
   }
 }
 
@@ -88,16 +93,20 @@
 /* loader-quart */
 
 .loader {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   display: inline-block;
   vertical-align: middle;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .loading-spinner__loader-quart {
-  border-radius: 50px;
+  border-radius: 100px;
   border: 6px solid #353535;
+  font-size: 12px;
 }
 
 .loading-spinner__loader-quart::after {
@@ -343,10 +352,11 @@ article button {
 
 .fa-heart {
   animation: progress-heart 10s;
+  position: absolute;
 }
 
-i .fa-heart {
-  font-size: 0.6em;
+.filled-heart {
+  position: relative;
 }
 
 @keyframes progress-heart {
