--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   background-color: #eaeaea;
-  animation: together 3s forwards;
+  animation: together 3s linear forwards;
 }
 
 @keyframes together {
@@ -116,7 +116,7 @@
   left: -6px;
   bottom: -6px;
   right: -6px;
-  border-radius: 50px;
+  border-radius: 100px;
   border: 6px solid transparent;
   border-top-color: #99e2d0;
   animation: spin 3s linear 0s infinite;
@@ -351,38 +351,29 @@ article button {
 }
 
 .fa-heart {
-  animation: progress-heart 10s;
-  position: absolute;
-}
-
-.filled-heart {
   position: relative;
 }
 
+.fa-heart:hover {
+  opacity: 1;
+  z-index: 1;
+}
+
+.filled-heart {
+  display: none;
+}
+
+.filled-heart:hover {
+  display: block;
+  animation: progress-heart 10s;
+  position: absolute;
+  z-index: 2;
+  right: 8px;
+}
+
 @keyframes progress-heart {
-  form {
-    background-color: #ff79da;
-    transform: translateY(0%);
-  }
-
-  25% {
-    background-color: #d06adb;
-    transform: translateY(25%);
-  }
-
-  50% {
-    background-color: #bc64db;
-    transform: translateY(-50%);
-  }
-
-  75% {
-    background-color: #a65ddc;
-    transform: translateY(-75px);
-  }
-
-  to {
-    background-color: #9e52de;
-    transform: translateY(-100%);
+  0% {
+    background: linear-gradient(to right, blue, white);
   }
 }
 
