--- a/menu.css
+++ b/menu.css
@@ -66,7 +66,7 @@ article {
   height: 400px;
   margin-bottom: 20px;
 }
-.entry {
+/*.entry {
   content: "";
   position: absolute;
   left: 0;
@@ -83,7 +83,7 @@ article {
   0% {
     transform: scaleY(0);
   }
-}
+}*/
 
 .article--size {
   height: 500px;
